test/kind/alias4.kk.out
test/kind/alias4.kk(4,15): error: Type a/aint is ambiguous and can refer to multiple imports:
 [static/modA/aint]