test/kind/alias4.kk
// test name hiding
import static/modA

alias aint  = modA/aint
alias ok1   = aint
alias ok2   = modA/aint
